tests/snapshots/options__opt_multiline-3.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> c                                                                             "
"  b1                                                                            "
"  b2                                                                            "
"  a                                                                             "
"  3/3                                                                        2/0"
">                                                                               "
cursor: (24, 3)
