tests/snapshots/options__opt_multiline@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b1                                                                            "
"  b2                                                                            "
"> a                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
