tests/snapshots/options__opt_multiline@003.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b1\\\\nb2\", \"c\"]\noptions: --multiline\nafter:\n  @key Up"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> c                                                                             "
"  b1                                                                            "
"  b2                                                                            "
"  a                                                                             "
"  3/3                                                                        2/0"
">                                                                               "
cursor: (24, 3)
