tests/snapshots/options__opt_multiline_custom_sep.snap
---
source: tests/options.rs
assertion_line: 519
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  y                                                                             "
"  p                                                                             "
"  q                                                                             "
"  r                                                                             "
"> x                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
