tests/snapshots/options__opt_multiline_custom_sep@001.snap
---
source: tests/options.rs
description: "input: items [\"x\", \"p|q|r\", \"y\"]\noptions: --multiline |"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  y                                                                             "
"  p                                                                             "
"  q                                                                             "
"  r                                                                             "
"> x                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
